Release ...
* [nt]roff: The ".nx" request now works again, it previously caused
  a segmentation fault because of a null pointer dereference (bug
  reported by Michael Hobgood).
* [nt]roff: With the ".hylang" request, words that consist of four
  characters are now subject to hyphenation (with the traditional
  hyphenation, five characters are the minimum length).
* troff, dpost, otfdump: The operator 12 in CFF Top DICT entries was not
  handled correctly, resulting in misleading error messages with some
  OpenType fonts. This has been fixed (bug reported by D. Jeff Dionne).

Release 060619
* troff: The ".minss" request has been added. It allows troff to decrease
  the size of the word space below the value set by ".ss" when adjusting
  lines at both margins.
* troff: The ".kernpair", ".kernafter", ".kernbefore", ".lhang", and
  ".rhang" requests now also accept groups of characters to which the
  same kerning/hanging value is applied.
* [nt]roff: It is now possible to use strings inside macros names (e.g.
  ".xx\*(yy" as documented.
* [nt]roff: The ".if d", ".if n", and ".rr" requests erroneously applied
  to a shorter two-character name if an undefined longer name was given
  as an argument; this has been fixed.
* troff: The ".fkern" request now properly refers to a single mounted
  instance of a font; it previously affected all mounted instances of
  one font metrics file.
* troff: Character replacements with ".tr" where the target character
  does not originate from the current font but is found in the fallback
  sequence are now performed correctly. Previously, an invalid heap
  access could occur, resulting in the choice of random characters.
* troff: Margin characters set with ".mc" are now correctly placed in
  combination with hanging characters set with ".rhang".
* [nt]roff: It is legal to call ".it" or ".dt" without arguments, thus
  a warning is no longer issued in this case.
* troff: Selecting one of the base fonts with ".ft" without a previous