@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)troff.h	1.23 (gritter) 4/14/06
+ * Sccsid @(#)troff.h	1.24 (gritter) 7/2/06
  */
 
 extern struct tracktab {
@@ -58,6 +58,7 @@ extern	short		*chtab;
 extern	int		c_endash;
 
 extern	int		kern;
+extern	int		lettrack;
 
 extern	void		growfonts(int);
 extern	void		setlig(int, int);
