@@ -7,35 +7,35 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.81 (gritter) 6/28/06";
+	"@(#)/usr/ucb/otfdump.sl	6.82 (gritter) 7/2/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.81 (gritter) 6/28/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.81 (gritter) 6/28/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.82 (gritter) 7/2/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.82 (gritter) 7/2/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.81 (gritter) 6/28/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.82 (gritter) 7/2/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.81 (gritter) 6/28/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.82 (gritter) 7/2/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.81";
+const char revision[] = "6.82";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.45 (gritter) 6/15/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.78 (gritter) 6/28/06
 n2.c: * Sccsid @(#)n2.c	1.20 (gritter) 4/27/06
-n3.c: * Sccsid @(#)n3.c	1.92 (gritter) 6/16/06
+n3.c: * Sccsid @(#)n3.c	1.93 (gritter) 7/2/06
 n4.c: * Sccsid @(#)n4.c	1.28 (gritter) 5/31/06
 n5.c: * Sccsid @(#)n5.c	1.44 (gritter) 6/16/06
-n7.c: * Sccsid @(#)n7.c	1.53 (gritter) 6/15/06
+n7.c: * Sccsid @(#)n7.c	1.56 (gritter) 7/2/06
 n8.c: * Sccsid @(#)n8.c	1.24 (gritter) 6/26/06
-n9.c: * Sccsid @(#)n9.c	1.44 (gritter) 5/2/06
-ni.c: * Sccsid @(#)ni.c	1.23 (gritter) 6/13/06
+n9.c: * Sccsid @(#)n9.c	1.45 (gritter) 7/2/06
+ni.c: * Sccsid @(#)ni.c	1.25 (gritter) 7/2/06
 nii.c: * Sccsid @(#)nii.c	1.32 (gritter) 6/15/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.83 (gritter) 6/13/06
+tdef.h: * Sccsid @(#)tdef.h	1.86 (gritter) 7/2/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.23 (gritter) 3/22/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.34 (gritter) 5/6/06
-nroff.d/proto.h: * Sccsid @(#)proto.h	1.35 (gritter) 6/13/06
+nroff.d/proto.h: * Sccsid @(#)proto.h	1.36 (gritter) 7/2/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.6 (gritter) 4/25/06
 troff.d/afm.c: * Sccsid @(#)afm.c	1.54 (gritter) 5/1/06
 troff.d/afm.h: * Sccsid @(#)afm.h	1.31 (gritter) 5/1/06
@@ -44,10 +44,10 @@ troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.13 (gritter) 4/30/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.56 (gritter) 6/24/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
-troff.d/proto.h: * Sccsid @(#)proto.h	1.45 (gritter) 6/13/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.70 (gritter) 4/25/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.147 (gritter) 6/15/06
-troff.d/troff.h: * Sccsid @(#)troff.h	1.23 (gritter) 4/14/06
+troff.d/proto.h: * Sccsid @(#)proto.h	1.47 (gritter) 7/2/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.72 (gritter) 7/2/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.149 (gritter) 7/2/06
+troff.d/troff.h: * Sccsid @(#)troff.h	1.24 (gritter) 7/2/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
 libhnj/hnjalloc.c: * Sccsid @(#)hnjalloc.c	1.3 (gritter) 8/26/05
